examples/negative/40_fluo_medium_mismatch.fluo
# BREAKS: mixing two media on one connected subnet (fluorite/02 sec. 1:
#   "One medium per connected subnet in v1; mixing is a compile error
#   (FOPEN-1)").
# EXPECT-TODO: WO-32
# Self-calibration (WO-31 D3): NOT front-end decidable. Mixing is a
# property of a connected subnet whose edges resolve to components
# bound to different media; that resolution is lowering-time geometry/
# component binding (WO-32). The self-contained surface here has one
# `flownet(medium=Water)` with one plain `Pipe` edge -- the second
# medium never enters the net at parse time. Candidate finding: the
# FOPEN-1 mixed-medium compile error belongs to WO-32 (fluorite lowering
# medium consistency), not the WO-31 front end.
import std.fluorite (Pipe)

medium Water: liquid
    props: registry(potable_water_nist)

medium ShopAir: gas
    props: registry(air_nist)

flownet Mixed(medium=Water):
    reference: ambient(101kPa, 293K)
    nodes: a, b
    edges:
        bad: Pipe(from=line.run) (a -> b)
        # `bad` is declared under a gas medium record while the net
        # header fixes Water -- a mixed-medium subnet.
